<resources>
    <string name="app_name">BVS HIGH</string>
    <string name="admission_number">Admission Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="bvs_high">BVS HIGH</string>
    <string name="please_select">Please Select</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="parents_guardian">Parents/Guardian</string>
    <string name="contact_us">Contact Us</string>
    <string name="service_name">Notification Listener Service</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="homework">Homework</string>
    <string name="colon"> :</string>

    <!-- Teachers Names -->

    <string name="phy">PHY</string>
    <string name="chem">CHE</string>
    <string name="eng">ENG</string>
    <string name="math">MATH</string>
    <string name="com_lab">Comp. Lab</string>
    <string name="bvk">BVK</string>
    <string name="sb">SB</string>
    <string name="sr">SR</string>
    <string name="sk">SK</string>
    <string name="bw">BW</string>
    <string name="dg">DG</string>
    <string name="ag">AG</string>
    <string name="trk">TRK</string>
    <string name="bn">BN</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="routine">Routine</string>
    <string name="routine_big">ROUTINE</string>
    <string name="attendance">Attendance</string>
    <string name="results">Results</string>
    <string name="tution_fees">Tution Fees</string>
    <string name="events">Events</string>
    <string name="alerts">Alerts</string>
    <string name="teacher_s_contact">Teacher\'s Contact</string>
    <string name="calendar">Calendar</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_profile">View Profile</string>
    <string name="display_my_routine">Display My Routine</string>
    <string name="display_enitre_routine">Display Enitre Routine</string>
    <string name="homework_details">Homework Details</string>
    <string name="username">Username</string>
    <string name="grade_sec">Grade:</string>
    <string name="sec">Sec:</string>
    <string name="branch">Branch:</string>
    <string name="branch_name">Branch</string>
    <string name="id_no">ID no:</string>
    <string name="logout">Logout</string>
    <string name="load">Load</string>

    <string name="brihaspati">Brihaspati Vidyasadan</string>
    <string name="date">DATE:</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="time">Time</string>
    <string name="subject">Subject</string>
    <string name="about_college">About College</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">Thank you for taking some of your time to write us feedback. Please tell us about the services that you have received so far. We appreciate your suggestion and comments and want to make sure we meet your expectations.</string>
    <string name="send">Send</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="details">Details</string>
    <string name="monthly_tests_results">MONTHLY TESTS RESULTS</string>
    <string name="main_exam_results">MAIN EXAM RESULTS</string>
    <string name="message_college">MESSAGE COLLEGE</string>
    <string name="start">start</string>
    <string name="dash">-</string>
    <string name="end">end</string>


    <string name="sunday">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="quoteForTheDay1">There\'s No More Difficult Transition Than Saturday To Sunday!</string>
    <string name="quoteForTheDay2">Hope you have a good Saturday!</string>


    <string-array name="dash_content">
        <item>Home</item>
        <item>Routine</item>
        <item>Calender</item>
        <item>Notifications</item>
        <item>Results</item>
        <item>Events</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assignment">Assignment</string>
    <string name="due_date">Select Due Date</string>
    <string name="post">POST</string>
    <string name="enter_the_assignment_work">Enter the assignment work</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="message_to_school">Message To School</string>


</resources>
