<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:checked="true"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_menu_alert"
            android:title="@string/alerts" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/events" />

        <item
            android:id="@+id/nav_routine"
            android:icon="@drawable/ic_routine"
            android:title="@string/routine" />

        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_results"
            android:title="@string/results" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/homework"
            android:title="@string/homework"
            android:icon="@drawable/ic_assignment"/>

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_menu_attendance"
            android:title="@string/attendance" />

        <item
            android:id="@+id/nav_fees"
            android:icon="@drawable/ic_menu_fees"
            android:title="@string/tution_fees" />



        <item
            android:title="@string/communicate">

            <menu>
                <item
                    android:id="@+id/nav_teacherContact"
                    android:icon="@drawable/ic_menu_teachers"
                    android:title="@string/teacher_s_contact" />

                <item
                    android:id="@+id/message_to_school"
                    android:icon="@drawable/ic_message"
                    android:title="@string/message_to_school" />

                <item
                    android:id="@+id/about_college"
                    android:icon="@drawable/ic_school"
                    android:title="@string/about_college" />

                <item
                    android:id="@+id/feedback"
                    android:title="@string/feedback"
                    android:icon="@drawable/ic_feedback"/>

                <item
                    android:id="@+id/contact_us"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/contact_us" />

            </menu>
        </item>

    </group>

    <item
        android:title="@string/account">

        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="1"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings"
                app:showAsAction="never" />

            <item
                android:id="@+id/logout"
                app:showAsAction="never"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                android:orderInCategory="2"/>
        </menu>
    </item>

</menu>