<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/bvs_logo_small"
        android:id="@+id/imageView2"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/bvs_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:id="@+id/bvsHigh"
        android:textSize="20sp" />

    <TextView
        android:text="@string/please_select"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp" />

    <Button
        android:text="@string/student"
        android:layout_width="200dp"
        android:elevation="3dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:id="@+id/student_button"
        tools:targetApi="lollipop"
        android:background="@drawable/button_border"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/teacher"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:elevation="3dp"
        android:background="@drawable/button_border"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_button"
        tools:targetApi="lollipop" />

</LinearLayout>