<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:text="@string/feedback_text"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_margin="14dp"
        android:hint="@string/write_your_feedback"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2" />

    <android.support.v7.widget.AppCompatButton
        android:text="@string/send"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:id="@+id/log_in" />

</LinearLayout>