<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_student__profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="np.edu.bvs.bvshigh.Student_Profile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:border_color="#FF0000"
            android:layout_gravity="center"
            android:id="@+id/profile_pic"
            android:src="@drawable/image"
            android:layout_width="100dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="100dp" />


        <EditText
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_person_black"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="10dp"
            android:id="@+id/student_name"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/student_email"
            android:hint="@string/email"
            android:textSize="15sp"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <EditText
            android:hint="@string/dob"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_menu_calendar"
            android:drawableLeft="@drawable/ic_menu_calendar"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:inputType="date"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <EditText
            android:hint="@string/branch_name"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_person_black"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/EditText8"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <EditText
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_phone_number"
            android:drawableLeft="@drawable/ic_phone_number"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:textSize="15sp"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <EditText
            android:hint="@string/guardian_name"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_menu_teachers"
            android:drawableLeft="@drawable/ic_menu_teachers"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/guardian_name"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

    </LinearLayout>
</LinearLayout>