<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5c1913">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="145dp"
        app:srcCompat="@drawable/bvs_logo_small"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:textColorHint="@android:color/holo_orange_light">

        <EditText
            android:inputType="text|textEmailAddress"
            android:id="@+id/editTextUsername"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@android:color/holo_orange_light">

        <EditText
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:hint="@string/password"
            android:id="@+id/editTextPassword"
            android:textColorHighlight="@color/white"
            android:shadowColor="@color/white"
            android:textColorLink="@color/white"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:text="@string/log_in"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:id="@+id/log_in" />

    <android.support.v7.widget.AppCompatButton
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="sans-serif" />

</LinearLayout>