<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:cardCornerRadius="3dp"
            android:background="@color/white"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:text="@string/bvk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_gravity="center_horizontal"
                    android:layout_toRightOf="@+id/subject_code"
                    android:layout_toEndOf="@+id/subject_code"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />

                <TextView
                    android:text="@string/homework"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/grade_sec"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/name"
                    android:layout_alignLeft="@+id/name"
                    android:layout_alignStart="@+id/name"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_alignStart="@id/grade_sec"
                    android:layout_below="@id/grade_sec"
                    android:layout_alignLeft="@id/grade_sec"
                    android:text="@string/homework_details"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_code"
                    android:text="@string/phy"
                    android:textColor="#000"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="36sp"
                    android:layout_alignTop="@+id/grade_sec"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="normal|bold" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>